<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/main_navigation"
   app:startDestination="@id/nav_main">

   <fragment
      android:id="@+id/nav_main"
      android:name="com.opensystem.smallwork.ui.fragments.main.MainFrag"
      android:label="@string/home"
      tools:layout="@layout/fragment_main">
      <action
         android:id="@+id/action_nav_main_to_profile_frag"
         app:destination="@id/profile_frag" />
      <action
         android:id="@+id/action_nav_main_to_worker_frag"
         app:destination="@id/worker_frag" />
   </fragment>
   <fragment
      android:id="@+id/nav_schedule"
      android:name="com.opensystem.smallwork.ui.fragments.main.shedule.ScheduleFrag"
      android:label="@string/schedule"
      tools:layout="@layout/fragment_schedule" />
   <fragment
      android:id="@+id/nav_chat"
      android:name="com.opensystem.smallwork.ui.fragments.main.chat.ChatFrag"
      android:label="@string/chat"
      tools:layout="@layout/fragment_chat" />
   <fragment
      android:id="@+id/nav_menu"
      android:name="com.opensystem.smallwork.ui.fragments.main.menu.MenuFrag"
      android:label="@string/menu"
      tools:layout="@layout/fragment_menu"/>
   <fragment
      android:id="@+id/profile_frag"
      android:name="com.opensystem.smallwork.ui.fragments.main.menu.profile.ProfileFrag"
      android:label="@string/profile"
      tools:layout="@layout/fragment_profile" />
   <fragment
      android:id="@+id/worker_frag"
      android:name="com.opensystem.smallwork.ui.fragments.main.home.worker.WorkerFrag"
      android:label="WorkerFrag"
      tools:layout="@layout/fragment_worker">
      <argument
         app:argType="com.opensystem.smallwork.models.Worker"
         android:name="worker"/>
   </fragment>

</navigation>