<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:layout_weight="1"
   android:layout_margin="@dimen/margin_size3"
   android:orientation="vertical">

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_size3"
      android:layout_marginBottom="@dimen/margin_size3"
      android:orientation="horizontal">

      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_size0"
         android:text="@string/status"
         android:textColor="@color/hint"
         android:fontFamily="@font/app_regular"/>

      <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:text="Finalizado"
         android:textColor="@color/green"/>

   </LinearLayout>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contract_type"
            android:textColor="@color/hint"
            android:fontFamily="@font/app_regular" />

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="To Match"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size4" />

      </LinearLayout>

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:textColor="@color/hint"
            android:fontFamily="@font/app_regular"/>

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Web Sites and Apps"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size4" />

      </LinearLayout>

   </LinearLayout>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/margin_size3"
         android:layout_weight="1"
         android:orientation="vertical">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:textSize="@dimen/text_size4" />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Personally"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size4" />

      </LinearLayout>

      <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/margin_size3"
         android:layout_weight="1"
         android:orientation="vertical">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_size0"
            android:text="@string/value"
            android:textSize="@dimen/text_size4" />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="R$ 30.000,00"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size4" />

      </LinearLayout>

   </LinearLayout>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_size3"
      android:orientation="horizontal">

      <LinearLayout

         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening"
            android:textSize="@dimen/text_size4" />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="January 10/2021"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size4" />

      </LinearLayout>

      <LinearLayout

         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closure"
            android:textSize="@dimen/text_size4" />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="January 30/2021"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size4" />

      </LinearLayout>

   </LinearLayout>

   <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_size3"
      android:text="@string/description"
      android:textSize="@dimen/text_size4" />

   <TextView
      android:id="@+id/descTxt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/lorem_medium"
      android:textColor="@color/black"
      android:textSize="@dimen/text_size4" />

</LinearLayout>