<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:layout_margin="@dimen/margin_size3"
   android:orientation="vertical">

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">

         <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgAvatar"
            android:layout_width="@dimen/img_size_medium"
            android:layout_height="@dimen/img_size_medium"
            android:padding="2dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            app:srcCompat="@drawable/profile"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
               android:id="@+id/txt_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/margin_size3"
               android:layout_marginEnd="@dimen/margin_size3"
               android:text="@string/username"
               android:textColor="@color/black"
               android:textSize="@dimen/text_size4" />

            <TextView
               android:id="@+id/txt_profession"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/margin_size3"
               android:layout_marginEnd="@dimen/margin_size3"
               android:hint="@string/type_here_to_edit"
               android:textColor="@color/black" />
         </LinearLayout>

      </LinearLayout>

   </LinearLayout>

   <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_size3"
      android:gravity="center|start"
      android:text="@string/description"
      android:textColor="@color/color_primary"
      android:textSize="@dimen/text_size4" />

   <TextView
      android:id="@+id/txt_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_size3"
      android:drawablePadding="@dimen/margin_size2"
      android:gravity="center|start"
      android:hint="@string/type_here_to_edit"
      android:textColor="@color/black"
      android:textSize="@dimen/text_size4" />

   <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawablePadding="@dimen/margin_size2"
      android:gravity="center|start"
      android:text="@string/locality"
      android:textColor="@color/color_primary"
      android:textSize="@dimen/text_size4" />

   <TextView
      android:id="@+id/txt_address"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_size3"
      android:drawablePadding="@dimen/margin_size2"
      android:gravity="center|start"
      android:hint="@string/type_here_to_edit"
      android:textColor="@color/black"
      android:textSize="@dimen/text_size4" />

   <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center|start"
      android:text="@string/contract_type"
      android:textColor="@color/color_primary"
      android:textSize="@dimen/text_size4"
      android:visibility="gone" />

   <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_size3"
      android:gravity="center|start"
      android:hint="@string/type_here_to_add"
      android:textColor="@color/black"
      android:textSize="@dimen/text_size4"
      android:visibility="gone" />

   <LinearLayout
      android:id="@+id/ll_value_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawablePadding="@dimen/margin_size2"
         android:gravity="center|start"
         android:text="@string/value"
         android:textColor="@color/color_primary"
         android:textSize="@dimen/text_size4" />

      <TextView
         android:id="@+id/edit_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_size3"
         android:drawablePadding="@dimen/margin_size2"
         android:gravity="center|start"
         android:hint="@string/type_here_to_add"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size4" />
   </LinearLayout>

</LinearLayout>